Details
-
Bug
-
Status: Closed (View Workflow)
-
Minor
-
Resolution: Fixed
-
10.6.15, 11.4
-
None
Description
SELECT 123 AS x is the same as SELECT 123 x. Extending to strings, SELECT '123' AS 'x' gives:
MariaDB [test]> SELECT '123' AS 'x';
|
+-----+
|
| x |
|
+-----+
|
| 123 |
|
+-----+
|
1 row in set (0.000 sec)
|
Which is what one would expect.
However, SELECT '123' 'x' yields an unexpected result:
MariaDB [test]> SELECT '123' 'x';
|
+------+
|
| 123 |
|
+------+
|
| 123x |
|
+------+
|
1 row in set (0.001 sec)
|
In the last example, the column name should match the returned value (123x or similar).
https://mariadb.com/kb/en/string-literals/